--- a/fplan/public/style.css
+++ b/fplan/public/style.css
@@ -16,10 +16,17 @@ A:hover {text-decoration: underline; color: #000000;}
 h1 {
 	margin: 0;
 	padding: 0;
+	
 }
-#content h2 {
+h2 {
 	margin: 0;
 	padding: 0;
+	font-family:Verdana, sans-serif;
+	font-size: 16px;
+}
+p {
+	font-family:Verdana, sans-serif;
+	font-size: 12px;
 }
 
 #content p {
@@ -100,12 +107,22 @@ background-color:#cfcfff;
 #sidebar-a {
 	float: right;
 	width: 276px; /*This must be the same as the content margin-right*/
-	background: #ffffff;
 	margin-right: 2px;
 	margin-left: 2px;
-	border: 1px #808080 solid;
+	
 }
-
+#sidebar-a div.first {
+	margin: 1px;
+	background: #ffffff;	
+	border: 1px #808080 solid;	
+}
+#sidebar-a div.second {
+	margin-top: 10px;
+    margin-left: 1px;
+    margin-right: 1px;
+	background: #ffffff;	
+	border: 1px #808080 solid;	
+}
 #content {
 	background: #ffffff;
 	
