--- a/fplan/public/style.css
+++ b/fplan/public/style.css
@@ -47,6 +47,18 @@ p {
 	padding: 0;
 }
 
+div.progress-popup {
+position:absolute;
+display:none;
+padding-left: 5px;
+z-index:15;
+left:8px;
+top:25px;
+background-color:#ff0000;
+color:#ffffff;
+border: 1px #808080 solid;
+}
+
 div.popup {
 position:absolute;
 display:none;
@@ -112,12 +124,14 @@ background-color:#cfcfff;
 	
 }
 #sidebar-a div.first {
-	margin: 1px;
+	margin: 2px;
+	padding: 2px;
 	background: #ffffff;	
 	border: 1px #808080 solid;	
 }
 #sidebar-a div.second {
 	margin-top: 10px;
+	padding: 2px;
     margin-left: 1px;
     margin-right: 1px;
 	background: #ffffff;	
