--- a/fplan/public/style.css
+++ b/fplan/public/style.css
@@ -136,6 +136,8 @@ background-color:#cfcfff;
 	padding: 2px;
 	background: #ffffff;	
 	border: 1px #808080 solid;	
+	font-family:Verdana, sans-serif;
+	font-size: 10px;
 }
 #sidebar-a div.second {
 	margin-top: 10px;
