--- a/fplan/public/style.css
+++ b/fplan/public/style.css
@@ -127,8 +127,10 @@ background-color:#cfcfff;
 #sidebar-a {
 	float: right;
 	width: 276px; /*This must be the same as the content margin-right*/
+	height: 500px;
 	margin-right: 2px;
 	margin-left: 2px;
+	overflow: auto;
 	
 }
 #sidebar-a div.first {
