COordinate picker for mapview

--- a/fplan/public/style.css
+++ b/fplan/public/style.css
@@ -76,6 +76,16 @@ top:0;
 background-color:#ffffff;
 border: 1px #808080 solid;
 }
+div.opopup {
+position:absolute;
+display:none;
+padding-left: 20px;
+z-index:10;
+left:0;
+top:0;
+background-color:#ffffff;
+border: 1px #808080 solid;
+}
 div.popup div{
 font-family:Verdana, sans-serif;
 text-decoration:underline;
